# agent_state_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
deployment/k8s/: configmap.yaml  deployment.yaml  service.yaml
deployment/monitoring/: prometheus.yml
deployment/monitoring/grafana_dashboards/: agent_health.json
scripts/: setup_env_windows.ps1
src/agent_session/: __init__.py  client.py  demo.py  langgraph_integration.py  llm_worker.py
src/agent_session/api/: dependencies.py  exceptions.py  routes.py
src/agent_session/core/: __init__.py  exactly_once.py  rollback_engine.py  state_manager.py  telemetry.py
src/agent_session/infrastructure/: __init__.py  db_session.py  event_journal.py  kv_store.py
src/agent_session/models/: __init__.py  contracts.py  events.py  state.py
src/agent_session/utils/: logging_config.py
tests/: conftest.py  test_exactly_once.py  test_rollback_engine.py  test_state_manager.py
