[project]
name = "agent-session"
version = "0.1.0"
description = "State-centric architecture for LLM agent sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "redis>=5.0.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
    "mlflow>=2.10.0",
    "langgraph>=0.0.26",
    "langchain-openai>=0.0.8",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.24.1",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "."
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true